--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <h2>新功能</h2>
-        <h2>新功能2</h2>
-        <h3>新功能4</h3>
-        <h3>新功能3</h3>
-    </body>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - cubes</title>
+  <link rel="stylesheet" href="./dist/style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js'></script><script  src="./dist/script.js"></script>
+
+</body>
 </html>
